--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.9",
     "babel-loader": "^8.2.4",
+    "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2"
   }
