--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@modular-css/rollup": "^28.1.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.2",
