--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
-    "@modular-css/rollup": "^28.1.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.2",
@@ -65,7 +64,7 @@
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
