--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["./src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "src/stories"]
 }
